--- a/App/src/app/layout/pages/tabs/blood-requests/blood-requests.page.html
+++ b/App/src/app/layout/pages/tabs/blood-requests/blood-requests.page.html
@@ -11,15 +11,15 @@
           <ion-title>Blood-Requests</ion-title>
         </ion-col>
         <ion-col>
-          <img class="filter-btn" src="../../../../../assets/filter.png" alt="filter" id="open-modal" expand="block"  >
+          <img class="filter-btn" src="../../../../../assets/filter.png" alt="filter" id="blood-modal" expand="block"  >
           <ion-content class="ion-padding">
-            <ion-modal trigger="open-modal" (willDismiss)="onWillDismiss($event)">
+            <ion-modal trigger="blood-modal" (willDismiss)="onWillDismiss($event)">
               <ng-template>
                 <ion-header>
                   <ion-toolbar color="primary" style="display: flex; justify-content: space-between; align-items: center;">
-                    <ion-title style="flex-grow: 1; text-align: center;">Apply Filter</ion-title>
+                    <ion-title style="flex-grow: 1; text-align: start;">Apply Filter</ion-title>
                     <ion-buttons slot="end" style="position: absolute; right: 0;">
-                      <ion-button (click)="cancel()">Cancel</ion-button>
+                      <ion-button style="font-size: 14px;"  (click)="cancel()">Cancel</ion-button>
                     </ion-buttons>
                   </ion-toolbar>                  
                 </ion-header>
@@ -70,14 +70,14 @@
                 <ion-footer>
                   <ion-toolbar>
                     <ion-grid>
-                      <ion-row>
-                        <ion-col class="ion-padding ion-text-center">
-                          <ion-button (click)="clearSelections()">
+                      <ion-row class="ion-padding-horizontal">
+                        <ion-col class="ion-text-center">
+                          <ion-button expand="block" (click)="clearSelections()">
                             Clear
                           </ion-button>
                         </ion-col>
-                        <ion-col class="ion-padding ion-text-center">
-                          <ion-button (click)="confirm()" [strong]="true">
+                        <ion-col  class="ion-text-center">
+                          <ion-button expand="block" (click)="confirm()" [strong]="true">
                             Confirm
                           </ion-button>
                         </ion-col>
@@ -247,6 +247,15 @@
                       <ion-button (click)="accept($event,l,'ACCEPTED')">
                         Accept
                       </ion-button>
+                      
+                    </ion-col>
+                    <ion-col
+                      class="ion-text-start"
+                      *ngIf="l.status != 'PENDING' && !!l.acceptor"
+                    >
+                      <ion-label class="name">
+                        <ion-badge slot="start">{{l.acceptor.firstName | uppercase}}</ion-badge>
+                      </ion-label>
                     </ion-col>
                    
                   </ion-row>
@@ -254,17 +263,17 @@
                     <ion-col size="3" class=" ion-text-center ion-no-padding"
                     [ngClass]="{'status-pending': l?.status == 'PENDING','status-allocated' : l?.status == 'ALLOCATED','status-received': l.status== 'RECEIVED','status-done' : l?.status == 'DONE','status-accepted' : l.status == 'ACCEPTED' ,'statusdoclose': l.status=='CLOSE'}"
                   >
-                    <ion-label class="">{{l?.status}}</ion-label>
+                    <ion-label class="">{{l?.status}}    </ion-label>
                   </ion-col>
                     
-                    <ion-col
+                    <!-- <ion-col
                       class="ion-text-end"
                       *ngIf="l.status != 'PENDING' && !!l.acceptor"
                     >
                       <ion-label class="name">
                         {{l.acceptor.firstName}} {{l.acceptor.lastName}}
                       </ion-label>
-                    </ion-col>
+                    </ion-col> -->
                   </ion-row>
                 </ion-grid>
               </ion-card-content>
