--- a/App/src/app/layout/pages/admin/mylist-details/request-mylist-detail/request-mylist-detail.page.html
+++ b/App/src/app/layout/pages/admin/mylist-details/request-mylist-detail/request-mylist-detail.page.html
@@ -61,10 +61,24 @@
                     <ion-label>: {{data?.state}}</ion-label>
                   </ion-col>
                 </ion-row>
-                <ion-row>
+                <ion-row *ngIf="!!data?.district">
+                  <ion-col size="12" >
+                    <ion-label class="head">District</ion-label>
+                    <ion-label> : {{data?.district}}</ion-label>
+                  </ion-col>
+                </ion-row>
+
+                <ion-row *ngIf="!!data?.tahsil">
+                  <ion-col size="12" >
+                    <ion-label class="head">Tehsil</ion-label>
+                    <ion-label> : {{data?.tahsil}}</ion-label>
+                  </ion-col>
+                </ion-row>
+
+                <ion-row *ngIf="!!data?.village">
                   <ion-col size="12">
-                    <ion-label class="head">City</ion-label>
-                    <ion-label>: {{data?.city}}</ion-label>
+                    <ion-label class="head">Village</ion-label>
+                    <ion-label> : {{data?.village}}</ion-label>
                   </ion-col>
                 </ion-row>
                 <ion-row>
@@ -83,12 +97,6 @@
                   <ion-col size="12">
                     <ion-label class="head">Illness</ion-label>
                     <ion-label>: {{data?.illness}}</ion-label>
-                  </ion-col>
-                </ion-row>
-                <ion-row>
-                  <ion-col size="12">
-                    <ion-label class="head">Location</ion-label>
-                    <ion-label>: {{data?.location}}</ion-label>
                   </ion-col>
                 </ion-row>
                 <ion-row>
@@ -374,10 +382,22 @@
                       <ion-label>: {{donor?.state}}</ion-label>
                     </ion-col>
 
-                    <ion-col size="12">
-                      <ion-label class="head">City</ion-label>
-                      <ion-label>: {{donor?.city}}</ion-label>
+                    <ion-col size="12" *ngIf="!!donor?.district">
+                      <ion-label class="head">District</ion-label>
+                      <ion-label>: {{donor?.district}}</ion-label>
                     </ion-col>
+                  </ion-row>
+                  <ion-row>
+                    <ion-col size="12" *ngIf="!!donor?.tahsil">
+                      <ion-label class="head">Tehsil</ion-label>
+                      <ion-label>: {{donor?.tahsil}}</ion-label>
+                    </ion-col>
+
+                    <ion-col size="12" *ngIf="!!donor?.village">
+                      <ion-label class="head">Village</ion-label>
+                      <ion-label>: {{donor?.village}}</ion-label>
+                    </ion-col>
+
                   </ion-row>
                   <ion-row>
                     <ion-col size="12">
@@ -459,10 +479,22 @@
                     <ion-label>: {{donor?.state}}</ion-label>
                   </ion-col>
 
-                  <ion-col size="12">
-                    <ion-label class="head">City</ion-label>
-                    <ion-label>: {{donor?.city}}</ion-label>
+                  <ion-col size="12" *ngIf="!!donor?.district">
+                    <ion-label class="head">District</ion-label>
+                    <ion-label>: {{donor?.district}}</ion-label>
                   </ion-col>
+                </ion-row>
+                <ion-row>
+                  <ion-col size="12" *ngIf="!!donor?.tahsil">
+                    <ion-label class="head">Tehsil</ion-label>
+                    <ion-label>: {{donor?.tahsil}}</ion-label>
+                  </ion-col>
+
+                  <ion-col size="12" *ngIf="!!donor?.village">
+                    <ion-label class="head">Village</ion-label>
+                    <ion-label>: {{donor?.village}}</ion-label>
+                  </ion-col>
+
                 </ion-row>
                 <ion-row>
                   <ion-col size="12">
