--- a/App/src/app/layout/pages/tabs/blood-requests/blood-requests.page.html
+++ b/App/src/app/layout/pages/tabs/blood-requests/blood-requests.page.html
@@ -4,13 +4,13 @@
     <ion-title>Blood-Requests</ion-title> -->
     <ion-grid>
       <ion-row class="ion-justify-content-center ion-align-items-center">
-        <ion-col size="auto">
+        <ion-col size="1" class="ion-margin-end">
           <ion-back-button default-href="/layout/home"></ion-back-button>
         </ion-col>
-        <ion-col>
-          <ion-title>Blood-Requests</ion-title>
+        <ion-col size="6">
+          <ion-title class="ion-no-padding">Blood-Requests</ion-title>
         </ion-col>
-        <ion-col>
+        <ion-col size="2">
           <img class="filter-btn" src="../../../../../assets/filter.png" alt="filter" id="blood-modal" expand="block"  >
           <ion-content class="ion-padding">
             <ion-modal trigger="blood-modal" (willDismiss)="onWillDismiss($event)">
@@ -89,7 +89,7 @@
             </ion-modal>
           </ion-content>
         </ion-col>
-        <ion-col size="auto" (click)="refreshData()">
+        <ion-col size="2" (click)="refreshData()">
           <img class="refresh-btn" src="../../../../../assets/new-refresh.png" alt="">
         </ion-col>
 
