--- a/App/src/app/shared/models/bloodrequest-mylist/bloodrequest-mylist.component.html
+++ b/App/src/app/shared/models/bloodrequest-mylist/bloodrequest-mylist.component.html
@@ -58,10 +58,22 @@
                   <ion-label>: {{data.state}}</ion-label>
                 </ion-col>
               </ion-row>
-              <ion-row>
+              <ion-row *ngIf="!!data.district">
                 <ion-col size="12">
-                  <ion-label class="head">City</ion-label>
-                  <ion-label>: {{data.city}}</ion-label>
+                  <ion-label class="head">District</ion-label>
+                  <ion-label>: {{data.district}}</ion-label>
+                </ion-col>
+              </ion-row>
+              <ion-row *ngIf="!!data.tahsil">
+                <ion-col size="12">
+                  <ion-label class="head">Tehsil</ion-label>
+                  <ion-label>: {{data.tahsil}}</ion-label>
+                </ion-col>
+              </ion-row>
+              <ion-row *ngIf="!!data.village">
+                <ion-col size="12">
+                  <ion-label class="head">Village</ion-label>
+                  <ion-label>: {{data.village}}</ion-label>
                 </ion-col>
               </ion-row>
               <ion-row>
@@ -80,12 +92,6 @@
                 <ion-col size="12">
                   <ion-label class="head">Illness</ion-label>
                   <ion-label>: {{data.illness}}</ion-label>
-                </ion-col>
-              </ion-row>
-              <ion-row>
-                <ion-col size="12">
-                  <ion-label class="head">Location</ion-label>
-                  <ion-label>: {{data.location}}</ion-label>
                 </ion-col>
               </ion-row>
               <ion-row>
@@ -187,10 +193,22 @@
                   <ion-label>: {{data?.donor?.state}}</ion-label>
                 </ion-col>
               </ion-row>
-              <ion-row>
+              <ion-row *ngIf="data?.donor?.district">
                 <ion-col size="12">
-                  <ion-label class="head">City</ion-label>
-                  <ion-label>: {{data?.donor?.city}}</ion-label>
+                  <ion-label class="head">District</ion-label>
+                  <ion-label>: {{data?.donor?.district}}</ion-label>
+                </ion-col>
+              </ion-row>
+              <ion-row *ngIf="data?.donor?.tahsil">
+                <ion-col size="12">
+                  <ion-label class="head">Tehsil</ion-label>
+                  <ion-label>: {{data?.donor?.tahsil}}</ion-label>
+                </ion-col>
+              </ion-row>
+              <ion-row *ngIf="data?.donor?.village">
+                <ion-col size="12">
+                  <ion-label class="head">Village</ion-label>
+                  <ion-label>: {{data?.donor?.village}}</ion-label>
                 </ion-col>
               </ion-row>
               <ion-row *ngIf="data?.donor?.gender == 'FEMALE'">
