--- a/App/src/app/shared/models/donation-history/donation-history.component.html
+++ b/App/src/app/shared/models/donation-history/donation-history.component.html
@@ -88,10 +88,22 @@
                   <ion-label>: {{data?.bloodRequest?.state}}</ion-label>
                 </ion-col>
               </ion-row>
-              <ion-row>
+              <ion-row *ngIf="!!data?.bloodRequest.district">
                 <ion-col size="12">
-                  <ion-label class="head">City</ion-label>
-                  <ion-label>: {{data?.bloodRequest?.city}}</ion-label>
+                  <ion-label class="head">District</ion-label>
+                  <ion-label>: {{data?.bloodRequest?.district}}</ion-label>
+                </ion-col>
+              </ion-row>
+              <ion-row *ngIf="!!data?.bloodRequest.tahsil">
+                <ion-col size="12">
+                  <ion-label class="head">Tehsil</ion-label>
+                  <ion-label>: {{data?.bloodRequest?.tahsil}}</ion-label>
+                </ion-col>
+              </ion-row>
+              <ion-row *ngIf="!!data?.bloodRequest.village">
+                <ion-col size="12">
+                  <ion-label class="head">Village</ion-label>
+                  <ion-label>: {{data?.bloodRequest?.village}}</ion-label>
                 </ion-col>
               </ion-row>
               <ion-row>
@@ -166,9 +178,19 @@
                   <ion-label> : {{data?.state}}</ion-label>
                 </ion-col>
 
-                <ion-col size="12">
-                  <ion-label class="head">City</ion-label>
-                  <ion-label> : {{data?.city}}</ion-label>
+                <ion-col size="12" *ngIf="!!data.district">
+                  <ion-label class="head">District</ion-label>
+                  <ion-label> : {{data?.district}}</ion-label>
+                </ion-col>
+
+                <ion-col size="12" *ngIf="!!data.tahsil">
+                  <ion-label class="head">Tehsil</ion-label>
+                  <ion-label> : {{data?.tahsil}}</ion-label>
+                </ion-col>
+
+                <ion-col size="12" *ngIf="!!data.village">
+                  <ion-label class="head">Village</ion-label>
+                  <ion-label> : {{data?.village}}</ion-label>
                 </ion-col>
 
                 <ion-col size="12">
